# INFOMOVAss2Template

./: .gitmodules  CMakeLists.txt  README.md  bootstrap_linux_mac_ARM.sh  bootstrap_linux_mac_X86.sh  bootstrap_windows.bat  cache.cpp  cache.h  game.cpp  game.h
misc/: _ getting started.docx
template/: common.h  opencl.cpp  opengl.cpp  precomp.h  surface.cpp  template.cpp  tmpl8math.cpp  tmpl8math.h
